HEAD only (unreleased)

  New Features

    - CMFDefault skins: Added members_delete_form.
      This adds a confirmation step to avoid accidental deletion of members.

    - DirectoryView and derived classes can now have metadata associated with
      them just like regular FSObject-derived objects can.

    - DirectoryView and derived classes: It is now possible to customize what 
      gets created to represent directories inside the directory view.
      Previously, the code had a fixed assumption that all directories on the 
      file system must turn into instances of 
      CMFCore.DirectoryView.DirectoryView(Surrogate). It is now possible to 
      register a class deriving from DirectoryView and have that be 
      instantiated instead.

    - ActionsTool: Added new way to define Actions.
      'CMF Action Category' objects can now be added to the portal_actions
      tool and 'CMF Action' objects to categories or subcategories. To
      migrate oldstyle Actions (ActionInformation objects) you can create a
      snapshot and re-import Actions using the portal_setup tool.

    - TypesTool: TypeInformation classes are now pluggable.
      Any class that implements the TypeInformation interface and is
      a registered meta type can now be used in the TypesTool.

  Bug Fixes

    - Got rid of the "CMF Site" and "Configured CMF Site" duality in the ZMI
      add list by removing the "CMF Site" class registration in CMFDefault
      and moving the "Configured CMF Site" registration from CMFSetup into
      CMFDefault, renaming it to "CMF Site". 
      (http://www.zope.org/Collectors/CMF/364)

    - Updated RELEASE.txt and the slurp_release script to now use Subversion
      instead of CVS, and to reflect the new tag/branch naming conventions
      used in the CMF repository.

    - Added testing framework to suppress / examine output from warnings
      module and from zLOG.

    - CMFUid/UniqueIdGeneratorTool.py: Replaced the old BTree.Length.Length